--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-frontend/node_modules
 backend/node_modules
 backend/data
+frontend/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -16,7 +16,8 @@ backend/data
 /coverage
 
 # next.js
-/.next/
+frontend/.next/
+fromtend/.next/.*
 /out/
 
 # production
