--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # dependencies
 backend/node_modules
-backend/data
+backend/data/store.db
 frontend/node_modules
 /.pnp
 .pnp.*
@@ -42,3 +42,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+logs
