--- a/backend/package.json
+++ b/backend/package.json
@@ -9,27 +9,49 @@
     "build": "echo 'No build step required'",
     "test": "jest",
     "migrate": "node src/database/migrate.js",
-    "seed": "node src/database/seed.js"
+    "migrate-postgres": "node src/database/migrate-postgres.js",
+    "migrate-full": "node src/database/migrate-full.js",
+    "test-postgres": "node test-postgres-migration.js",
+    "test-performance": "node test-performance-optimization.js",
+    "test-monitoring": "node test-monitoring-simple.js",
+    "seed": "node src/database/seed.js",
+    "logs:view": "tail -f logs/combined-$(date +%Y-%m-%d).log",
+    "logs:error": "tail -f logs/error-$(date +%Y-%m-%d).log",
+    "health:check": "curl -s http://localhost:3001/api/monitoring/health | jq",
+    "metrics:view": "curl -s http://localhost:3001/api/monitoring/metrics"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
+    "@sentry/node": "^9.38.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.3",
+    "pg-pool": "^3.10.1",
+    "prom-client": "^15.1.3",
+    "redis": "^5.6.0",
+    "sharp": "^0.34.3",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1",
-    "compression": "^1.7.4",
-    "express-async-errors": "^3.1.1"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "@types/pg": "^8.15.4",
+    "@types/redis": "^4.0.10",
+    "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "keywords": [
