--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "metrics:view": "curl -s http://localhost:3001/api/monitoring/metrics"
   },
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@sentry/node": "^9.38.0",
+    "alipay-sdk": "^4.14.0",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -36,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "pg-pool": "^3.10.1",
     "prom-client": "^15.1.3",
@@ -44,9 +47,7 @@
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "@paypal/checkout-server-sdk": "^1.0.3",
-    "alipay-sdk": "^4.14.0"
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/pg": "^8.15.4",
