Use the images in local path instead of the one in internet

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "test-postgres": "node test-postgres-migration.js",
     "test-performance": "node test-performance-optimization.js",
     "test-monitoring": "node test-monitoring-simple.js",
-    "seed": "node src/database/seed.js",
+    "seed": "node src/database/seed-universal.js",
+    "generate-json": "node scripts/generate-json-from-frontend.js",
+    "sync-data": "npm run generate-json && npm run seed",
     "logs:view": "tail -f logs/combined-$(date +%Y-%m-%d).log",
     "logs:error": "tail -f logs/error-$(date +%Y-%m-%d).log",
     "health:check": "curl -s http://localhost:3001/api/monitoring/health | jq",
