Add stripe payment

--- a/cicd/environments/env.example
+++ b/cicd/environments/env.example
@@ -73,4 +73,21 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your_email@gmail.com
 SMTP_PASSWORD=your_email_password
-SMTP_FROM=noreply@yourdomain.com 
+SMTP_FROM=noreply@yourdomain.com
+
+# Payment Configuration
+# PayPal Configuration
+PAYPAL_CLIENT_ID=your_paypal_client_id
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret
+PAYPAL_MODE=sandbox
+
+# Alipay Configuration
+ALIPAY_APP_ID=your_alipay_app_id
+ALIPAY_PRIVATE_KEY=your_alipay_private_key
+ALIPAY_PUBLIC_KEY=your_alipay_public_key
+ALIPAY_GATEWAY_URL=https://openapi.alipaydev.com/gateway.do
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here 
