--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,7 @@
     "metrics:view": "curl -s http://localhost:3001/api/monitoring/metrics"
   },
   "dependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.3",
     "@sentry/node": "^9.38.0",
-    "alipay-sdk": "^4.14.0",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -47,6 +45,7 @@
     "redis": "^5.6.0",
     "sharp": "^0.34.3",
     "sqlite3": "^5.1.6",
+    "stripe": "^18.5.0",
     "uuid": "^9.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
