Update the app deployment

--- a/frontend/docker-compos-dev.yml
+++ b/frontend/docker-compos-dev.yml
@@ -1,51 +1,48 @@
 # ========================================
 # E-Shop Frontend Docker Compose
 # ========================================
-# Production setup
+# Local development setup
 
 services:
   # ========================================
-  # Frontend Service
+  # Development Frontend Service
   # ========================================
-  frontend:
+  frontend-dev:
     build:
       context: .
       dockerfile: Dockerfile
-      target: production
-    container_name: eshop-frontend
+      target: dependencies
+    container_name: eshop-frontend-dev
     ports:
       - "3000:3000"
     environment:
-      # Application Configuration
-      NODE_ENV: production
+      # Development Configuration
+      NODE_ENV: development
       PORT: 3000
       HOSTNAME: 0.0.0.0
       
       # Frontend Configuration
       NEXT_PUBLIC_API_URL: http://localhost:3001/api
-      NEXT_PUBLIC_APP_NAME: E-Shop
+      NEXT_PUBLIC_APP_NAME: E-Shop (Dev)
       NEXT_PUBLIC_APP_URL: http://localhost:3000
       
       # Next.js Configuration
       NEXT_TELEMETRY_DISABLED: 1
       
     volumes:
-      # Optional: Mount for development (uncomment for hot reload)
-      # - .:/app
-      # - /app/node_modules
-      # - /app/.next
+      # Mount source code for hot reload
+      - .:/app
+      - /app/node_modules
+      - /app/.next
       
     networks:
       - eshop-network
       
     restart: unless-stopped
+    profiles:
+      - development
     
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    command: npm run dev
 
 # ========================================
 # Networks
