--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,57 +1,67 @@
 # ========================================
-# E-Shop Backend Docker Compose
+# E-Shop Backend Production Docker Compose
 # ========================================
-# Local development and testing setup
-
-version: '3.8'
+# Production deployment configuration
 
 services:
   # ========================================
-  # Backend API Service
+  # Backend API Service (Production)
   # ========================================
   backend:
     build:
       context: .
       dockerfile: Dockerfile
       target: production
-    container_name: eshop-backend
+    container_name: eshop-backend-prod
     ports:
       - "3001:3001"
     environment:
       # Application Configuration
-      NODE_ENV: development
+      NODE_ENV: production
       PORT: 3001
-      FRONTEND_URL: http://localhost:3000
+      FRONTEND_URL: ${FRONTEND_URL:-https://yourdomain.com}
       
-      # Database Configuration (SQLite for development)
-      DB_CLIENT: sqlite3
-      DB_NAME: ./data/store.db
+      # Database Configuration (PostgreSQL)
+      DB_CLIENT: postgres
+      DB_HOST: ${DB_HOST:-postgres}
+      DB_PORT: ${DB_PORT:-5432}
+      DB_NAME: ${DB_NAME:-eshop}
+      DB_USER: ${DB_USER:-eshop_user}
+      DB_PASSWORD: ${DB_PASSWORD}
+      
+      # Redis Configuration
+      REDIS_HOST: ${REDIS_HOST:-redis}
+      REDIS_PORT: ${REDIS_PORT:-6379}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
       
       # JWT Configuration
-      JWT_SECRET: dev_secret_123456
-      JWT_REFRESH_SECRET: dev_refresh_secret_654321
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
       
-      # Redis Configuration (optional for development)
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_PASSWORD: ""
+      # Security Configuration
+      SECURE_COOKIES: true
+      HTTPS_ONLY: true
+      STRICT_TRANSPORT_SECURITY: true
       
       # File Upload Configuration
       UPLOAD_DIR: /app/uploads
       MAX_FILE_SIZE: 5242880
       
       # Logging Configuration
-      LOG_LEVEL: debug
+      LOG_LEVEL: info
       LOG_FILE_PATH: /app/logs
       
+      # Monitoring Configuration
+      SENTRY_DSN: ${SENTRY_DSN}
+      
     volumes:
-      # Persist database and uploads
-      - ./data:/app/data
-      - ./uploads:/app/uploads
-      - ./logs:/app/logs
+      # Persist uploads and logs
+      - uploads_data:/app/uploads
+      - logs_data:/app/logs
       
     depends_on:
       - redis
+      - postgres
       
     networks:
       - eshop-network
@@ -66,97 +76,66 @@ services:
       start_period: 40s
 
   # ========================================
-  # Redis Service (for caching and sessions)
+  # Redis Service (Production)
   # ========================================
   redis:
     image: redis:7-alpine
-    container_name: eshop-redis
-    ports:
-      - "6379:6379"
+    container_name: eshop-redis-prod
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
     volumes:
       - redis_data:/data
     networks:
       - eshop-network
     restart: unless-stopped
-    command: redis-server --appendonly yes
+    command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
 
   # ========================================
-  # PostgreSQL Service (for production testing)
+  # PostgreSQL Service (Production)
   # ========================================
   postgres:
     image: postgres:15-alpine
-    container_name: eshop-postgres
+    container_name: eshop-postgres-prod
     environment:
-      POSTGRES_DB: eshop
-      POSTGRES_USER: eshop_user
-      POSTGRES_PASSWORD: eshop_password
-    ports:
-      - "5432:5432"
+      POSTGRES_DB: ${DB_NAME:-eshop}
+      POSTGRES_USER: ${DB_USER:-eshop_user}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backups:/backups
     networks:
       - eshop-network
     restart: unless-stopped
-    profiles:
-      - postgres
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-eshop_user} -d ${DB_NAME:-eshop}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # ========================================
-  # Backend with PostgreSQL (alternative configuration)
+  # Nginx Reverse Proxy (Optional)
   # ========================================
-  backend-postgres:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: production
-    container_name: eshop-backend-postgres
+  nginx:
+    image: nginx:alpine
+    container_name: eshop-nginx
     ports:
-      - "3002:3001"
-    environment:
-      # Application Configuration
-      NODE_ENV: development
-      PORT: 3001
-      FRONTEND_URL: http://localhost:3000
-      
-      # Database Configuration (PostgreSQL)
-      DB_CLIENT: postgres
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_NAME: eshop
-      DB_USER: eshop_user
-      DB_PASSWORD: eshop_password
-      
-      # JWT Configuration
-      JWT_SECRET: dev_secret_123456
-      JWT_REFRESH_SECRET: dev_refresh_secret_654321
-      
-      # Redis Configuration
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_PASSWORD: ""
-      
-      # File Upload Configuration
-      UPLOAD_DIR: /app/uploads
-      MAX_FILE_SIZE: 5242880
-      
-      # Logging Configuration
-      LOG_LEVEL: debug
-      LOG_FILE_PATH: /app/logs
-      
+      - "80:80"
+      - "443:443"
     volumes:
-      # Persist uploads and logs
-      - ./uploads:/app/uploads
-      - ./logs:/app/logs
-      
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
     depends_on:
-      - redis
-      - postgres
-      
+      - backend
     networks:
       - eshop-network
-      
     restart: unless-stopped
     profiles:
-      - postgres
+      - nginx
 
 # ========================================
 # Networks
@@ -172,4 +151,8 @@ volumes:
   redis_data:
     driver: local
   postgres_data:
+    driver: local
+  uploads_data:
+    driver: local
+  logs_data:
     driver: local
