--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,7 @@
     "test-monitoring": "node test-monitoring-simple.js",
     "seed": "node src/database/seed-universal.js",
     "seed-images": "node src/database/seed-with-images.js",
-    "generate-json": "node scripts/generate-json-from-frontend.js",
-    "sync-data": "npm run generate-json && npm run seed",
+    "sync-data": "npm run seed",
     "logs:view": "tail -f logs/combined-$(date +%Y-%m-%d).log",
     "logs:error": "tail -f logs/error-$(date +%Y-%m-%d).log",
     "health:check": "curl -s http://localhost:3001/api/monitoring/health | jq",
