--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -88,7 +88,7 @@ services:
     networks:
       - eshop-network
     restart: unless-stopped
-    command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes
+    command: redis-server --requirepass ${REDIS_PASSWORD:-defaultpassword} --appendonly yes
     healthcheck:
       test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
       interval: 30s
@@ -104,7 +104,7 @@ services:
     environment:
       POSTGRES_DB: ${DB_NAME:-eshop}
       POSTGRES_USER: ${DB_USER:-eshop_user}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-defaultpassword}
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./backups:/backups
