--- a/cicd/kubernetes/backend.yaml
+++ b/cicd/kubernetes/backend.yaml
@@ -21,7 +21,7 @@ data:
   DB_HOST: "postgres"
   DB_PORT: "5432"
   DB_NAME: "eshop"
-  DB_USER: "eshop_user"
+  DB_USER: "postgres"
   REDIS_HOST: "redis"
   REDIS_PORT: "6379"
   FRONTEND_URL: "https://yourdomain.com"
