--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -60,10 +60,10 @@ services:
       - logs_data:/app/logs
       
     depends_on:
-      - redis:
-          condition: service_healthy
-      - postgres:
-          condition: service_healthy
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
     networks:
       - eshop-network
       
