--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -70,11 +70,11 @@ services:
     restart: unless-stopped
     
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/api/monitoring/health"]
+      test: ["CMD-SHELL", "curl -fsSL -H 'x-forwarded-proto: https' http://localhost:3001/api/monitoring/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
 
   # ========================================
   # Redis Service (Production)
