--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       NEXT_TELEMETRY_DISABLED: 1
       
     volumes:
+      - uploads_data:/app/uploads
       # Optional: Mount for development (uncomment for hot reload)
       # - .:/app
       # - /app/node_modules
@@ -47,6 +48,26 @@ services:
       retries: 3
       start_period: 40s
 
+  # ========================================
+  # Nginx Reverse Proxy (Optional)
+  # ========================================
+  nginx:
+    image: nginx:alpine
+    container_name: eshop-nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - backend
+    networks:
+      - eshop-network
+    restart: unless-stopped
+    profiles:
+      - nginx
+      
 # ========================================
 # Networks
 # ========================================
@@ -54,3 +75,10 @@ networks:
   eshop-network:
     driver: bridge
     external: true
+
+# ========================================
+# Volumes
+# ========================================
+volumes:
+  uploads_data:
+    driver: local
