--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -53,7 +53,7 @@ services:
   # Nginx Reverse Proxy (Optional)
   # ========================================
   nginx:
-    image: nginx:alpine
+    image: nginx:1.28-alpine
     container_name: eshop-nginx
     ports:
       - "80:80"
