--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -62,8 +62,8 @@ services:
 
     volumes:
       # Persist uploads and logs
-      - uploads_data:/app/uploads
-      - logs_data:/app/logs
+      - eshop-uploads-data:/app/uploads
+      - eshop-logs-data:/app/logs
       
     depends_on:
       redis:
@@ -91,7 +91,7 @@ services:
     environment:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     volumes:
-      - redis_data:/data
+      - eshop-redis-data:/data
     networks:
       - eshop-network
     restart: unless-stopped
@@ -114,7 +114,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_HOST_AUTH_METHOD: trust  # Add this for initial setup
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - eshop-postgres-data:/var/lib/postgresql/data
       - ./backups:/backups
     networks:
       - eshop-network
@@ -172,14 +172,14 @@ networks:
 # ========================================
 volumes:
   redis_data:
-    name: redis_data
+    name: eshop-redis-data
     driver: local
   postgres_data:
-    name: postgres_data
+    name: eshop-postgres-data
     driver: local
   uploads_data:
-    name: uploads_data
+    name: eshop-uploads-data
     driver: local
   logs_data:
-    driver: local
-    name: logs_data
+    name: eshop-logs-data
+    driver: local 
