--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
     depends_on:
-      - backend
+      - frontend
     networks:
       - eshop-network
     restart: unless-stopped
