--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       NEXT_TELEMETRY_DISABLED: 1
       
     volumes:
-      - eshop-uploads-data:/app/uploads
+      - eshop-uploads-data:/app/uploads:ro
       # Optional: Mount for development (uncomment for hot reload)
       # - .:/app
       # - /app/node_modules
@@ -49,23 +49,23 @@ services:
       retries: 3
       start_period: 40s
 
-  # ========================================
-  # Nginx Reverse Proxy (Optional)
-  # ========================================
-  nginx:
-    image: nginx:1.28-alpine
-    container_name: eshop-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-    networks:
-      - eshop-network
-    restart: unless-stopped
-    profiles:
-      - nginx
+  # # ========================================
+  # # Nginx Reverse Proxy (Optional)
+  # # ========================================
+  # nginx:
+  #   image: nginx:1.28-alpine
+  #   container_name: eshop-nginx
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./ssl:/etc/nginx/ssl:ro
+  #   networks:
+  #     - eshop-network
+  #   restart: unless-stopped
+  #   profiles:
+  #     - nginx
       
 # ========================================
 # Networks
