update nginx deployment

--- a/deployment/nginx/mydomain.conf
+++ b/deployment/nginx/mydomain.conf
@@ -13,3 +13,14 @@ server {
         proxy_pass http://localhost:3000/admin;
     }
 }
+
+server {
+    listen 80;
+      location / {
+            proxy_pass http://localhost:3000;
+      }
+
+    location /bo-admin/ {
+        proxy_pass http://localhost:3000/admin;
+    }
+}
