--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,8 +20,7 @@ services:
       # Application Configuration
       NODE_ENV: production
       PORT: 3001
-      FRONTEND_URL: ${FRONTEND_URL:-https://yourdomain.com}
-      
+      FRONTEND_URL: ${FRONTEND_URL:-https://mydomain.com}
       # Database Configuration (PostgreSQL)
       DB_CLIENT: postgres
       DB_HOST: ${DB_HOST:-postgres}
@@ -29,36 +28,27 @@ services:
       DB_NAME: ${DB_NAME:-eshop}
       DB_USER: ${DB_USER:-postgres}
       DB_PASSWORD: ${DB_PASSWORD}
-      
       # Redis Configuration
       REDIS_HOST: ${REDIS_HOST:-redis}
       REDIS_PORT: ${REDIS_PORT:-6379}
       REDIS_PASSWORD: ${REDIS_PASSWORD}
-      
       # JWT Configuration
       JWT_SECRET: ${JWT_SECRET}
       JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
-      
       # Security Configuration
       SECURE_COOKIES: true
       HTTPS_ONLY: true
       STRICT_TRANSPORT_SECURITY: true
-      
       # File Upload Configuration
       UPLOAD_DIR: /app/uploads
       MAX_FILE_SIZE: 5242880
-      
       # Logging Configuration
       LOG_LEVEL: info
       LOG_FILE_PATH: /app/logs
-      
       # Monitoring Configuration
       SENTRY_DSN: ${SENTRY_DSN}
-      
       # Payments (Stripe)
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
-    
-    command: ["node", "src/index.js"]
 
     volumes:
       # Persist uploads and logs
