--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -22,9 +22,9 @@ services:
       PORT: 3000
       HOSTNAME: 0.0.0.0
       # Frontend Configuration
-      NEXT_PUBLIC_API_URL: http://localhost:3001/api
+      NEXT_PUBLIC_API_URL: http://10.170.0.4:3001/api
       NEXT_PUBLIC_APP_NAME: E-Shop
-      NEXT_PUBLIC_APP_URL: http://localhost:3000
+      NEXT_PUBLIC_APP_URL: http://10.170.0.4:3000
       # Next.js Configuration
       NEXT_TELEMETRY_DISABLED: 1
       
