--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     restart: unless-stopped
     
     healthcheck:
-      test: ["CMD-SHELL", "curl -fsSL -H 'x-forwarded-proto: https' http://localhost:3001/api/monitoring/health || exit 1"]
+      test: ["CMD-SHELL", "curl -fsSL -H 'x-forwarded-proto: https' http://10.170.0.4:3001/api/monitoring/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
