--- a/frontend/docker-compose-dev.yml
+++ b/frontend/docker-compose-dev.yml
@@ -23,7 +23,7 @@ services:
       HOSTNAME: 0.0.0.0
       
       # Frontend Configuration
-      NEXT_PUBLIC_API_URL: http://10.170.0.4:3001/api
+      NEXT_PUBLIC_API_URL: http://backend:3001/api
       NEXT_PUBLIC_APP_NAME: E-Shop (Dev)
       NEXT_PUBLIC_APP_URL: http://localhost:3000
       
