--- a/backend/docker-compose-dev.yml
+++ b/backend/docker-compose-dev.yml
@@ -20,7 +20,7 @@ services:
       # Application Configuration
       NODE_ENV: development
       PORT: 3001
-      FRONTEND_URL: http://localhost:3000
+      FRONTEND_URL: http://frontend:3000
       
       # Database Configuration (SQLite for development)
       DB_CLIENT: sqlite3
