--- a/deployment/nginx/mydomain.conf
+++ b/deployment/nginx/mydomain.conf
@@ -6,21 +6,21 @@ server {
     ssl_certificate_key /etc/nginx/ssl/mydomain.key;
  
     location / {
-        proxy_pass http://localhost:3000;
+        proxy_pass http://frontend:3000;
     }
 
     location /bo-admin/ {
-        proxy_pass http://localhost:3000/admin;
+        proxy_pass http://frontend:3000/admin;
     }
 }
 
 server {
     listen 80;
       location / {
-            proxy_pass http://localhost:3000;
+            proxy_pass http://frontend:3000;
       }
 
     location /bo-admin/ {
-        proxy_pass http://localhost:3000/admin;
+        proxy_pass http://frontend:3000/admin;
     }
 }
