--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     restart: unless-stopped
     
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      test: ["CMD", "curl", "-f", "http://frontend:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
