--- a/deployment/nginx/mydomain.conf
+++ b/deployment/nginx/mydomain.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name 10.170.0.4;
+    server_name fortunewhisper.com;
  
     ssl_certificate /etc/nginx/ssl/mydomain.crt;
     ssl_certificate_key /etc/nginx/ssl/mydomain.key;
@@ -23,8 +23,8 @@ server {
         proxy_set_header X-Forwarded-Host $host;
     }
     
-    location /api/ {
-        proxy_pass http://backend:3001/api;
+    location /backend/ {
+        proxy_pass http://backend:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -35,7 +35,7 @@ server {
 
 server {
     listen 80;
-    server_name 10.170.0.4;
+    server_name fortunewhisper.com;
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
@@ -53,8 +53,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
     }
-    location /api/ {
-        proxy_pass http://backend:3001/api;
+    location /backend/ {
+        proxy_pass http://backend:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
