--- a/backend/docker-compose-dev.yml
+++ b/backend/docker-compose-dev.yml
@@ -20,7 +20,7 @@ services:
       # Application Configuration
       NODE_ENV: development
       PORT: 3001
-      FRONTEND_URL: https://fortunewhisper.com
+      FRONTEND_URL: https://www.fortunewhisper.com
       
       # Database Configuration (SQLite for development)
       DB_CLIENT: sqlite3
@@ -58,7 +58,7 @@ services:
     restart: unless-stopped
     
     healthcheck:
-      test: ["CMD", "curl", "-f", "https://fortunewhisper.com/backend/api/monitoring/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3001/api/monitoring/health"]
       interval: 30s
       timeout: 10s
       retries: 3
