--- a/cicd/deployment/docker-compose/docker-compose.yml
+++ b/cicd/deployment/docker-compose/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - eshop_network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "https://fortunewhisper.com/backend/api/health"]
+      test: ["CMD", "curl", "-f", "https://backend.fortunewhisper.com/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -60,7 +60,7 @@ services:
       - eshop_network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "https://fortunewhisper.com"]
+      test: ["CMD", "curl", "-f", "https://www.fortunewhisper.com"]
       interval: 30s
       timeout: 10s
       retries: 3
