--- a/deployment/nginx/mydomain.conf
+++ b/deployment/nginx/mydomain.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name fortunewhisper.com;
+    server_name www.fortunewhisper.com;
  
     ssl_certificate /etc/nginx/ssl/mydomain.crt;
     ssl_certificate_key /etc/nginx/ssl/mydomain.key;
@@ -22,38 +22,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
     }
-    
-    location /backend/ {
-        proxy_pass http://backend:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-    }
 }
 
 server {
-    listen 80;
-    server_name fortunewhisper.com;
+    listen 443 ssl;
+    server_name backend.fortunewhisper.com;
+ 
+    ssl_certificate /etc/nginx/ssl/mydomain.crt;
+    ssl_certificate_key /etc/nginx/ssl/mydomain.key;
+ 
     location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-    }
-
-    location /bo-admin/ {
-        proxy_pass http://frontend:3000/admin;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-    }
-    location /backend/ {
         proxy_pass http://backend:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
