--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -86,7 +86,7 @@ ENV NEXT_TELEMETRY_DISABLED=1
 # Health Check
 # ========================================
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f https://fortunewhisper.com || exit 1
+    CMD curl -f https://www.fortunewhisper.com || exit 1
 
 # ========================================
 # Expose Port
