Revert "Update to use a real domain to access the services"
This reverts commit 7e0630d18b784f3a40158f78ad65c00429fd19be.

Revert "Update domain of backend and frontend"

This reverts commit fb624027211e5da7977a9c69e415018352df1ae7.

--- a/frontend/docker-compose-dev.yml
+++ b/frontend/docker-compose-dev.yml
@@ -23,9 +23,9 @@ services:
       HOSTNAME: 0.0.0.0
       
       # Frontend Configuration
-      NEXT_PUBLIC_API_URL: https://backend.fortunewhisper.com/api
+      NEXT_PUBLIC_API_URL: http://backend:3001/api
       NEXT_PUBLIC_APP_NAME: E-Shop (Dev)
-      NEXT_PUBLIC_APP_URL: https://www.fortunewhisper.com
+      NEXT_PUBLIC_APP_URL: http://frontend:3000
       
       # Next.js Configuration
       NEXT_TELEMETRY_DISABLED: 1
