--- a/deployment/nginx/mydomain.conf
+++ b/deployment/nginx/mydomain.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name www.fortunewhisper.com;
+    server_name 10.170.0.4;
  
     ssl_certificate /etc/nginx/ssl/mydomain.crt;
     ssl_certificate_key /etc/nginx/ssl/mydomain.key;
@@ -22,17 +22,39 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
     }
+    
+    location /api/ {
+        proxy_pass http://backend:3001/api;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+    }
 }
 
 server {
-    listen 443 ssl;
-    server_name backend.fortunewhisper.com;
- 
-    ssl_certificate /etc/nginx/ssl/mydomain.crt;
-    ssl_certificate_key /etc/nginx/ssl/mydomain.key;
- 
+    listen 80;
+    server_name 10.170.0.4;
     location / {
-        proxy_pass http://backend:3001;
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+    }
+
+    location /bo-admin/ {
+        proxy_pass http://frontend:3000/admin;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+    }
+    location /api/ {
+        proxy_pass http://backend:3001/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
