Update the url for frontend

--- a/cicd/deployment/docker-compose/docker-compose.yml
+++ b/cicd/deployment/docker-compose/docker-compose.yml
@@ -60,7 +60,7 @@ services:
       - eshop_network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://frontend:3000"]
+      test: ["CMD", "curl", "-f", "https://10.170.0.4"]
       interval: 30s
       timeout: 10s
       retries: 3
