--- a/cicd/deployment/docker-compose/docker-compose.dev.yml
+++ b/cicd/deployment/docker-compose/docker-compose.dev.yml
@@ -57,7 +57,7 @@ services:
       REDIS_PORT: 6379
       JWT_SECRET: dev_jwt_secret_change_in_production
       JWT_REFRESH_SECRET: dev_refresh_secret_change_in_production
-      FRONTEND_URL: http://frontend:3000
+      FRONTEND_URL: https://10.170.0.4
     volumes:
       - ../../backend:/app
       - /app/node_modules
