--- a/deployment/nginx/mydomain.conf
+++ b/deployment/nginx/mydomain.conf
@@ -6,7 +6,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/mydomain.key;
  
     location / {
-        proxy_pass http://frontend:3000;
+        proxy_pass https://10.170.0.4;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,7 +15,7 @@ server {
     }
 
     location /bo-admin/ {
-        proxy_pass http://frontend:3000/admin;
+        proxy_pass https://10.170.0.4/admin;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,7 +37,7 @@ server {
     listen 80;
     server_name 10.170.0.4;
     location / {
-        proxy_pass http://frontend:3000;
+        proxy_pass https://10.170.0.4;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -46,7 +46,7 @@ server {
     }
 
     location /bo-admin/ {
-        proxy_pass http://frontend:3000/admin;
+        proxy_pass https://10.170.0.4/admin;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
