--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       # Frontend Configuration
       NEXT_PUBLIC_API_URL: http://backend:3001/api
       NEXT_PUBLIC_APP_NAME: E-Shop
-      NEXT_PUBLIC_APP_URL: http://frontend:3000
+      NEXT_PUBLIC_APP_URL: https://10.170.0.4
       # Next.js Configuration
       NEXT_TELEMETRY_DISABLED: 1
       
@@ -42,7 +42,7 @@ services:
     restart: unless-stopped
     
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://frontend:3000"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
