--- a/cicd/deployment/docker-compose/docker-compose.yml
+++ b/cicd/deployment/docker-compose/docker-compose.yml
@@ -49,7 +49,8 @@ services:
     container_name: eshop_frontend
     environment:
       NODE_ENV: ${NODE_ENV:-production}
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+      # Use relative URL when behind nginx proxy to avoid mixed-content issues
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-/api}
       NEXT_PUBLIC_APP_NAME: ${NEXT_PUBLIC_APP_NAME}
     ports:
       - "3000:3000"
