Fix blocked:mixed-content issue

--- a/deployment/nginx/mydomain.conf
+++ b/deployment/nginx/mydomain.conf
@@ -25,6 +25,19 @@ server {
             return 204;
         }
     }
+    
+    # Proxy uploads to backend for serving uploaded images
+    location /uploads {
+        proxy_pass http://backend:3001/uploads;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Cache uploaded images aggressively
+        proxy_cache_valid 200 365d;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
  
     location / {
         proxy_pass http://frontend:3000;
@@ -59,6 +72,19 @@ server {
         if ($request_method = 'OPTIONS') {
             return 204;
         }
+    }
+    
+    # Proxy uploads to backend for serving uploaded images
+    location /uploads {
+        proxy_pass http://backend:3001/uploads;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Cache uploaded images aggressively
+        proxy_cache_valid 200 365d;
+        add_header Cache-Control "public, max-age=31536000, immutable";
     }
     
     location / {
