Revert "fix upload permission issue"
This reverts commit 02ef6dc3a0ac7031bbd5d0ec2b948f9da7d70439.

--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       NEXT_TELEMETRY_DISABLED: 1
       
     volumes:
-      - eshop-uploads-data:/app/uploads:rw
+      - eshop-uploads-data:/app/uploads:ro
       - ./static:/app/static
       # Optional: Mount for development (uncomment for hot reload)
       # - .:/app
